# TAMUTRAP-timing

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-ioc.txt  requirements.txt
assets/: desktop.ini
ioc/: rfq_ioc.py  timing_ioc.py
src/: changelog.py  core.py  gui_tk.py  launch_gui.bat  launch_gui.sh  spinapi.py  timing_card.py
src/pulses/: pulses3.txt  test.txt
tests/: conftest.py  test_core.py  test_timing_card.py
